<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  style="@style/CardView.Light"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="16dp"
  android:layout_marginStart="8dp"
  android:layout_marginEnd="8dp">
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/iconIV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerVertical="true"
      android:contentDescription="@string/icon"
      android:src="@android:drawable/ic_menu_gallery"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="@id/left_guideline"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/tv_title"
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/title"
      app:layout_constraintLeft_toRightOf="@+id/left_guideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <TextView
      android:id="@+id/tv_duration"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="120s"
      app:layout_constraintLeft_toRightOf="@+id/left_guideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_title" />
    <TextView
      android:id="@+id/tv_created_time"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/time_text_placeholder"
      app:layout_constraintLeft_toRightOf="@+id/left_guideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_duration" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/left_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.25" />
    <!--  <androidx.constraintlayout.widget.Guideline-->
    <!--    android:id="@+id/horizontal_center_line"-->
    <!--    android:layout_width="wrap_content"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    app:layout_constraintGuide_percent="0.50"-->
    <!--    android:orientation="horizontal" />-->
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

