<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/record_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/record"
    android:textSize="28sp"
    app:layout_constraintEnd_toStartOf="@id/guideline_vertical_right"
    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_left"
    app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_bottom" />
  <TextView
    android:id="@+id/title_label_tv"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:gravity="start|center_vertical"

    android:text="@string/title"
    app:layout_constraintBottom_toBottomOf="@+id/text_input_layout"
    app:layout_constraintLeft_toLeftOf="@id/guideline_vertical_left"
    app:layout_constraintRight_toLeftOf="@+id/guideline_vertical"
    app:layout_constraintTop_toTopOf="@+id/text_input_layout" />

  <TextView
    android:id="@+id/duration_label_tv"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:gravity="start|center_vertical"
    android:text="@string/duration"
    app:layout_constraintBottom_toBottomOf="@+id/slider"

    app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical_left"
    app:layout_constraintRight_toLeftOf="@+id/guideline_vertical"
    app:layout_constraintTop_toTopOf="@+id/slider" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_horizontal_bottom"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.85" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_vertical_left"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.09" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_vertical"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.32" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_vertical_right"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.91" />
  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_horizontal_top"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.15" />
  <com.google.android.material.slider.Slider
    android:id="@+id/slider"
    android:layout_width="0dp"
    android:layout_height="40dp"
    android:layout_marginTop="25dp"
    android:stepSize="1"
    android:valueFrom="15.0"
    android:valueTo="180.0"
    app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
    app:layout_constraintRight_toRightOf="@+id/guideline_vertical_right"
    app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/text_input_layout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="@+id/guideline_vertical"
    app:layout_constraintRight_toRightOf="@+id/guideline_vertical_right"
    app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal_top">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/title_input_et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:hint="@string/please_input_an_tittle" />
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>